news, sports and messages services

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "C2G Team",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "pg": "^7.9.0"
   },
